<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ba"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#371E03"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome_to_cafe_app_v1"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/button"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:background="#E91E63"
        android:onClick="sendNextActivity_1"
        android:text="@string/order_donuts"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginTop="248dp"
        android:onClick="sendNextActivity_2"
        android:text="@string/order_coffee"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginBottom="160dp"
        android:onClick="sendNextActivity_3"
        android:text="@string/order_details"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="158dp"
        android:layout_height="56dp"
        android:layout_marginBottom="160dp"
        android:onClick="sendNextActivity_4"
        android:text="@string/view_all_orders"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="114dp"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:srcCompat="@drawable/donutbutton"
        android:contentDescription="@string/todo2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="141dp"
        android:layout_height="142dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/donutbutton"
        android:contentDescription="@string/todo3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="157dp"
        android:layout_height="148dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/coffeeiconpng"
        android:contentDescription="@string/todo4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="152dp"
        android:layout_height="143dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/details"
        android:contentDescription="@string/todo5" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="149dp"
        android:layout_height="126dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cart"
        android:contentDescription="@string/todo6" />

</androidx.constraintlayout.widget.ConstraintLayout>